htdocs/luci-static/m3e/cascade.css
/* ... */
	header a {
		color: #bfbfbf;
		text-shadow: 0 -1px 0 hsla(var(--border-color-low-hsl), .25)
	}

	header .brand:hover,
	header ul .active>a {
		background-color: rgba(255, 255, 255, .05);
		color: var(--md-sys-color-primary);
		text-decoration: none
	}

	header .brand {
		flex: 0 1 auto;
		text-align: left;
		display: block;
		color: #404040;
		white-space: nowrap;
		overflow: hidden;
		text-overflow: ellipsis;
	}

	header .pull-right {
		/* flex: 0 0 auto; */
		margin: 0 12px;
	}

	header p {
		margin: 0;
		line-height: 40px
	}

	.nav,
	.zone-forwards .zone-dest,
	.zone-forwards .zone-src {
		display: flex;
		flex-direction: column
	}

	.dropdown-menu {
		background-color: #fff;
		float: left;
		position: absolute;
		top: 40px;
		left: -9999px;
		z-index: 900;
		min-width: 160px;
		max-width: 220px;
		zoom: 1;
		border-width: 0 1px 1px;
		box-shadow: 0 2px 4px rgba(0, 0, 0, .2);
		background-clip: padding-box;
		transition: height .3s ease-in-out;
		overflow: hidden
	}

	.dropdown-menu li {
		float: none;
		display: block;
		overflow: hidden;
		/* margin: 4px 0; */
	}

	.dropdown-menu a {
		display: block;
		padding: 4px 15px;
		clear: both;
		font-weight: 400;
		line-height: 18px;
		color: grey;
		text-shadow: 0 0 0 #fff
	}

	.dropdown-menu a:hover {
		background-color: #ddd;
		background-repeat: repeat-x;
		background-image: linear-gradient(to bottom, #eee, #ddd);
		color: #404040;
		text-decoration: none;
		box-shadow: inset 0 1px 0 rgba(0, 0, 0, .025), inset 0 -1px rgba(0, 0, 0, .025)
	}

	.dropdown:hover ul.dropdown-menu {
		left: 0
	}

	.dropdown-menu .dropdown-menu {
		position: absolute;
		left: 159px
	}

	#tabmenu {
	text-align: center;
	width: 100%
	}

	.cbi-tabmenu,
	.tabs {
		--tab-bar-background-color: var(--background-color-high);
		--tab-inactive-background-color-h: var(--border-color-low-h);
		--tab-inactive-background-color-s: var(--border-color-low-s);
		--tab-inactive-background-color-l: var(--border-color-low-l);
		--tab-inactive-background-color: var(--border-color-low);
		--tab-inactive-border-color: var(--border-color-medium);
		--tab-inactive-text-color-delta-l: 33.33%;
		--tab-inactive-text-color-l: calc(var(--tab-inactive-background-color-l) + var(--background-color-delta-l-sign) * var(--tab-inactive-text-color-delta-l));
		--tab-inactive-text-color: hsl(var(--tab-inactive-background-color-hsl));
		--tab-inactive-hover-background-color: var(--background-color-high);
		--tab-active-background-color: var(--background-color-high);
		--tab-active-text-color: #0069d6;
		--tab-active-border-color: var(--border-color-medium);
		margin: 0 0 12px;
		list-style: none;
		display: flex;
		flex-wrap: wrap;
		justify-content: center;
		background: var(--md-sys-color-card);
		border-radius: 1.5rem;
		gap: 6px;
		padding: 6px;
	}

	.cbi-tabmenu>li>a,
	.tabs>li>a {
		padding: 0 16px;
		white-space: nowrap;
		text-overflow: ellipsis;
		color: inherit;
		text-decoration: none;
		outline: 0;
		display: flex;
		align-items: center;
		justify-content: center;
		width: 100%;
		height: 100%;
	}

	.cbi-tabmenu>li:hover,
	.tabs>li:hover {
		transition: .3s
	}
	.cbi-tabmenu>li::before,
	.tabs>li::before {
		content: "";
		position: absolute;
		inset: 0;
		border-radius: inherit;
		background-color: transparent;
		pointer-events: none;
		transition: background-color .3s;
	}
	.cbi-tabmenu>li:hover::before,
	.tabs>li:hover::before {
		background-color: rgba(0, 0, 0, .05);
	}

	.cbi-tabmenu>li>a:focus-visible,
	.tabs>li>a:focus-visible {
		text-decoration: underline
	}

	.close:hover,
	.dropdown-menu>li>a:hover,
	.nav>li.active>a,
	.nav>li>a,
	.nav>li>a:hover,
	a.label:hover {
		text-decoration: none
	}

	.cbi-tabmenu>.cbi-tab-disabled,
	.tabs>li:not(.active) {
		color: var(--tab-inactive-text-color);
		background: 0 0;
		border: none;
		font-weight: 400;
	}
	.tabs>li.active,
	.cbi-tabmenu>li.cbi-tab-active {
		font-weight: 500;
	}

	.breadcrumb .active a,
	footer {
		color: var(--text-color-medium)
	}

	.tabs>li:hover::before {
		background-color: rgba(128, 128, 128, 0.1);
	}

	.cbi-tabmenu>li,
	.tabs>li {
		flex: 1 1 auto;
		display: flex;
		align-items: center;
		justify-content: center;
		background: var(--tab-active-background-color);
		border: 1px solid var(--tab-active-border-color);
		border-bottom: none;
		color: var(--primary-color-high);
		border: none;
		margin: 0;
		background: var(--md-sys-color-primary-container);
		color: #000;
		font-size: 15px;
		height: 42px;
		border-radius: 21px;
		padding: 0;
		white-space: nowrap;
		min-width: fit-content;
	}

	.cbi-dropdown.btn.spinning>ul:not(.dropdown),
	.cbi-dropdown.cbi-button.spinning>ul:not(.dropdown),
	.cbi-dropdown>ul {
		margin: 0 !important
	}

	.cbi-tab-disabled[data-errors]::after {
		content: attr(data-errors);
		background: #c43c35;
		color: #fff;
		height: 16px;
		min-width: 16px;
		border-radius: 8px;
		text-align: center;
		margin: 0 5px 0 0;
		padding: 3px 2px 1px;
		display: inline-flex;
		flex-direction: column;
		justify-content: center;
		font-size: 12px
	}

	.cbi-tabmenu.map {
		margin: 0
	}

	.cbi-tabmenu.map>li {
		font-size: 16.5px;
		font-weight: 700
	}

	.cbi-tab-descr {
		margin: -9px 0 18px
	}

	.tabs .dropdown-menu,
	.tabs .menu-dropdown {
		top: 35px;
		border-width: 1px;
		border-radius: 0 6px 6px
	}

	.tabs .dropdown-toggle:after,
	.tabs a.menu:after {
		border-top-color: #999;
		margin-top: 15px;
		margin-left: 5px
	}

	.tabs .open.dropdown .dropdown-toggle,
	.tabs li.open.menu .menu {
		border-color: #999
	}

	.tabs .dropdown.open .dropdown-toggle:after,
	.tabs li.open a.menu:after {
		border-top-color: #555
	}

	#modemenu li:last-child span.divider,
	.cbi-dropdown>ul.preview,
	.cbi-dropdown>ul>li .hide-close,
	.cbi-dropdown[open]>ul.dropdown>li .hide-open,
	.hidden,
	.nav>li:last-child>a::after,
	.tab-content>.tab-pane,
	.tab-content>div {
		display: none
	}
/* ... */

